swapped TreeMap and TreeSet to LLRedBlackTree