@@ -1,236 +1,64 @@
 package io.wcygan.collections.dictionary;
 
+import io.wcygan.collections.tree.LLRedBlackTree;
+import io.wcygan.collections.tree.SearchTree;
 import org.apache.commons.lang3.tuple.Pair;
 
-import java.util.*;
+import java.util.Collection;
+import java.util.Set;
 import java.util.stream.Collectors;
 
-import static io.wcygan.common.Utilities.isLessThan;
-
 public class TreeMap<K extends Comparable<K>, V> implements Map<K, V> {
-    Tree<K, V> root;
+
+    SearchTree<K, V> tree = new LLRedBlackTree<>();
 
     @Override
     public int size() {
-        return size(this.root);
+        return tree.size();
     }
 
     @Override
     public boolean isEmpty() {
-        return this.size() == 0;
+        return tree.isEmpty();
     }
 
     @Override
     public boolean containsKey(K key) {
-        return get(key) != null;
+        return tree.containsKey(key);
     }
 
     @Override
     public V get(K key) {
-        if (key == null) {
-            throw new NullPointerException("key is null");
-        }
-
-        return get(this.root, key);
+        return tree.search(key);
     }
 
     @Override
     public V put(K key, V value) {
-        if (key == null || value == null) {
-            throw new NullPointerException("arguments are null");
-        }
-
-        return put(this.root, key, value);
+        return tree.insert(key, value);
     }
 
     @Override
     public V remove(K key) {
-        if (key == null) {
-            throw new NullPointerException("key is null");
-        }
-
-        return attemptDelete(null, this.root, key);
+        return tree.remove(key);
     }
 
     @Override
     public void clear() {
-        this.root = null;
+        tree.entrySet().forEach(e -> tree.remove(e.getKey()));
     }
 
     @Override
     public Set<K> keySet() {
-        return entrySet().stream().map(Pair::getKey).collect(Collectors.toSet());
+        return tree.entrySet().stream().map(Pair::getKey).collect(Collectors.toSet());
     }
 
     @Override
     public Collection<V> values() {
-        return entrySet().stream().map(Pair::getValue).collect(Collectors.toList());
+        return tree.entrySet().stream().map(Pair::getValue).toList();
     }
 
     @Override
     public Set<Pair<K, V>> entrySet() {
-        Set<Pair<K, V>> s = new HashSet<>();
-        Queue<Tree<K, V>> nodes = new ArrayDeque<>();
-
-        if (this.root != null) {
-            nodes.add(this.root);
-        }
-
-        while (!nodes.isEmpty()) {
-            var curr = nodes.remove();
-            s.add(Pair.of(curr.key, curr.value));
-            Optional.ofNullable(curr.left).ifPresent(nodes::add);
-            Optional.ofNullable(curr.right).ifPresent(nodes::add);
-        }
-
-        return s;
-    }
-
-    private int size(Tree<K, V> root) {
-        if (root == null) {
-            return 0;
-        }
-
-        return 1 + size(root.left) + size(root.right);
-    }
-
-    private V put(Tree<K, V> tree, K key, V value) {
-        // if the tree is empty
-        if (this.root == null) {
-            this.root = Tree.root(key, value);
-            return null;
-        }
-
-        // If we've found the existing key
-        if (tree.key.equals(key)) {
-            var oldValue = tree.value;
-            tree.value = value;
-            return oldValue;
-        }
-
-        // Is the given key smaller than the key of the current tree root?
-        boolean smaller = isLessThan(key, tree.key);
-
-        // if:       Place the new root in the left subtree
-        // else if:  Place the new root in the right subtree
-        // else:     Recurse down to the next subtree
-        if (smaller && tree.left == null) {
-            tree.left = Tree.root(key, value);
-            return null;
-        } else if (!smaller && tree.right == null) {
-            tree.right = Tree.root(key, value);
-            return null;
-        } else {
-            var subtree = smaller ? tree.left : tree.right;
-            return put(subtree, key, value);
-        }
-    }
-
-    private V get(Tree<K, V> tree, K key) {
-        if (tree == null) {
-            return null;
-        }
-
-        if (tree.key.equals(key)) {
-            return tree.value;
-        }
-
-        boolean smaller = isLessThan(key, tree.key);
-        var subtree = smaller ? tree.left : tree.right;
-        return get(subtree, key);
-    }
-
-    private V attemptDelete(Tree<K, V> parent, Tree<K, V> current, K key) {
-        if (current == null) {
-            return null;
-        }
-
-        if (current.key.equals(key)) {
-            return delete(parent, current);
-        }
-
-        var next = isLessThan(key, current.key) ? current.left : current.right;
-        return attemptDelete(current, next, key);
-    }
-
-    private V delete(Tree<K, V> parent, Tree<K, V> toDelete) {
-        if (toDelete == null) {
-            return null;
-        }
-
-        var hasLeft = toDelete.left != null;
-        var hasRight = toDelete.right != null;
-
-        if (hasLeft && hasRight) {
-            return deleteTreeWithTwoChildren(toDelete);
-        } else if (hasLeft || hasRight) {
-            return deleteTreeWithOneChild(parent, toDelete);
-        } else {
-            return deleteTreeWithNoChildren(parent, toDelete);
-        }
-    }
-
-    private V deleteTreeWithTwoChildren(Tree<K, V> toReplace) {
-        var oldValue = toReplace.value;
-
-        // find minimum of right subtree
-        var toDelete = toReplace.right;
-        var toDeleteParent = toReplace;
-
-        while (toDelete.left != null) {
-            toDeleteParent = toDelete;
-            toDelete = toDelete.left;
-        }
-
-        // replace key and value with minimum of right subtree
-        toReplace.key = toDelete.key;
-        toReplace.value = toDelete.value;
-
-        // delete minimum of right subtree
-        delete(toDeleteParent, toDelete);
-
-        return oldValue;
-    }
-
-    private V deleteTreeWithOneChild(Tree<K, V> parent, Tree<K, V> toDelete) {
-        var child = Optional.ofNullable(toDelete.left).orElse(toDelete.right);
-
-        if (toDelete == this.root) {
-            this.root = child;
-        } else if (isLessThan(toDelete.key, parent.key)) {
-            parent.left = child;
-        } else {
-            parent.right = child;
-        }
-
-        return toDelete.value;
-    }
-
-    private V deleteTreeWithNoChildren(Tree<K, V> parent, Tree<K, V> toDelete) {
-        if (toDelete == this.root) {
-            this.root = null;
-        } else if (isLessThan(toDelete.key, parent.key)) {
-            parent.left = null;
-        } else {
-            parent.right = null;
-        }
-
-        return toDelete.value;
-    }
-
-    private static class Tree<K extends Comparable<K>, V> {
-        K key;
-        V value;
-        Tree<K, V> left;
-        Tree<K, V> right;
-
-        private Tree(K key, V value) {
-            this.key = key;
-            this.value = value;
-        }
-
-        public static <K extends Comparable<K>, V> Tree<K, V> root(K key, V value) {
-            return new Tree<>(key, value);
-        }
+        return tree.entrySet();
     }
 }
